<resources>
    <string name="app_name">NewsApp</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="explore">Explore</string>
    <string name="news_sources">News Sources</string>
    <string name="country">Countries</string>
    <string name="languages">Languages</string>
    <string name="search">Search</string>
    <string name="error">Error occurred while fetching news</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>